compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
---
----- SOURCE CODE

pub fn y() -> String {
  "\u{79}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([y/0]).

-spec y() -> binary().
y() ->
    ~"\x{79}".
