compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__assert_const_concat_multiple.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\nconst foo = \"foo\"\nconst foobar = foo <> \"bar\"\nconst foofoobarbaz = foo <> foobar <> \"baz\"\n\npub fn main() {\n  foofoobarbaz\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-spec main() -> binary().
main() ->
    <<"foo"/utf8, <<<<"foo"/utf8, "bar"/utf8>>/binary, "baz"/utf8>>/binary>>.
