compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__concat.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x, y) {\n  x <> y\n}\n"
---
----- SOURCE CODE

pub fn go(x, y) {
  x <> y
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/2]).

-spec go(binary(), binary()) -> binary().
go(X, Y) ->
    <<X/binary, Y/binary>>.
