compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__concat_constant.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\nconst a = \"Hello, \"\nconst b = \"Joe!\"\n\npub fn go() {\n  a <> b\n}\n"
---
----- SOURCE CODE

const a = "Hello, "
const b = "Joe!"

pub fn go() {
  a <> b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> binary().
go() ->
    <<"Hello, "/utf8, "Joe!"/utf8>>.
